--- a/src/sidepanel.html
+++ b/src/sidepanel.html
@@ -83,8 +83,8 @@
     <div class="timer" id="timer">00:00:00</div>
     
     <div class="blocked-section">
-      <h2>Blocked Categories</h2>
-      <ul id="blockedList">
+      <h2>Allowed Contexts</h2>
+      <ul id="allowedList">
         <li>Loading...</li>
       </ul>
     </div>
